# video4discord

./: Cargo.toml  README.md
src/: main.rs
video4discord/: Cargo.toml
video4discord-egui/: Cargo.toml
video4discord-egui/src/: app.rs  main.rs
video4discord/src/: lib.rs  main.rs
